--- a/.github/workflows/build-windows-msvc.yml
+++ b/.github/workflows/build-windows-msvc.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Install OpenSSL
       run: |
-        powershell -Command "(Start-BitsTransfer -Source https://slproweb.com/download/Win64OpenSSL-3_2_1.exe -Destination Win64OpenSSL-3_2_1.exe)"
+        powershell -Command "(Start-BitsTransfer -Source https://github.com/sfantree/i2pd/releases/download/1.0.0/Win64OpenSSL-3_2_1.exe -Destination Win64OpenSSL-3_2_1.exe)"
         ./Win64OpenSSL-3_2_1.exe /DIR="${{env.openssl_path}}" /TASKS="copytobin" /VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP-
 
     - name: Make copy of the OpenSSL libraries for CMake
